[gd_scene load_steps=9 format=3 uid="uid://cad25ojl47q8"]

[ext_resource type="FontFile" uid="uid://r5ttqaxnuvgk" path="res://assets/MaldiniBold.ttf" id="1_4cjqx"]
[ext_resource type="Script" path="res://scenes/game_over_menu.gd" id="1_k7vgk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hy06m"]
bg_color = Color(0, 0.239216, 0.305882, 1)
shadow_size = 5
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l65v3"]
bg_color = Color(0, 0.737255, 0.168627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4ktg"]
bg_color = Color(0, 0.572549, 0.631373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8be6j"]
bg_color = Color(0, 0.611765, 0.172549, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qgkmr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_blpyo"]

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource("1_k7vgk")

[node name="GameOverPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hy06m")

[node name="ResultLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -86.0
offset_right = 133.5
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4cjqx")
theme_override_font_sizes/font_size = 50
text = "PERDISTE  MAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="."]
offset_left = 369.0
offset_top = 698.0
offset_right = 638.0
offset_bottom = 761.0
theme_override_fonts/font = ExtResource("1_4cjqx")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_l65v3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u4ktg")
theme_override_styles/normal = SubResource("StyleBoxFlat_8be6j")
text = "Enviar puntos"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
download_file = "extends CanvasLayer# Método llamado cuando se presiona el botón de reiniciofunc _on_restart_button_pressed():    # Verifica que el nodo HTTPRequest esté presente y configurado correctamente    if $HTTPRequest:        var json_data = {\"data\": \"data_to_send\"}        var json_string = JSON.print(json_data) # Convertir datos a JSON string        var headers = {\"Content-Type\": \"application/json\"}        var url = \"http://192.168.0.90:25565\"                # Realizar la solicitud POST        $HTTPRequest.request(url, headers, true, HTTPClient.METHOD_POST, json_string)                # Emitir la señal 'restart' si es necesario        restart.emit()    else:        print(\"HTTPRequest node is not found or not valid.\")"

[node name="ItemList" type="ItemList" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.515
anchor_right = 0.504
anchor_bottom = 0.515
offset_left = -97.0
offset_top = 46.625
offset_right = 112.0
offset_bottom = 98.625
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_qgkmr")
theme_override_styles/panel = SubResource("StyleBoxEmpty_blpyo")
allow_search = false
item_count = 2
max_columns = 2
same_column_width = true
fixed_column_width = 94
item_0/text = "SOL"
item_1/text = "PALTA"

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 397.0
offset_top = 651.0
offset_right = 609.0
offset_bottom = 684.0
wrap_mode = 1

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="item_clicked" from="ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_text_edit_text_changed"]
